tests/negative/export_show_a.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

// No foo here.
